[ci skip] Fix commit tags icon whitespace

--- a/app/assets/stylesheets/pages/commits.scss
+++ b/app/assets/stylesheets/pages/commits.scss
@@ -70,6 +70,10 @@
   }
 }
 
+.commit-info .commit-link-icon {
+  margin-right: 5px;
+}
+
 /*
  * Commit message textarea for web editor and
  * custom merge request message
